duniverse/menhirLib.20200211/test/static/bad/tricky.mly
%%

let main :=
  bar

%token FOO
