duniverse/menhirLib.20200211/test/static/bad/tricky.exp
File "tricky.mly", line 6, characters 0-6:
Error: syntax error after 'bar' and before '%token'.
At this point, one of the following is expected:
an equals sign '=' followed with a symbol, or
a semicolon ';' followed with an expression, or
a bar '|' followed with an expression, or
another rule.
